--- a/templates/assignment/assignment-music-edit.html
+++ b/templates/assignment/assignment-music-edit.html
@@ -8,7 +8,7 @@
 
     <section id="create-page" class="auth">
         <form method="post" action="{% url 'assignment music edit' pk=assignmentmusic.pk %}" enctype="multipart/form-data">
-            <div class="container">
+            <div style="color: #551A8B" class="container">
                 <h1>Edit {{ assignmentmusic.assignment_name }} Assignment</h1>
                 {{ form }}
                 {% csrf_token %}
