--- a/templates/auth/profile-details.html
+++ b/templates/auth/profile-details.html
@@ -21,7 +21,7 @@
             </div>
             </div>
 
-            <div class="buttons">
+            <div style="padding-top: 27px" class="buttons">
                 <a href="{% url 'profile edit' pk=profile.pk %}" class="edit-button">Edit</a>
                 <a href="{% url 'profile delete' pk=profile.pk %}" class="delete-button">Delete</a>
             </div>
