--- a/templates/common/footer.html
+++ b/templates/common/footer.html
@@ -1,5 +1,5 @@
 <footer>
-<div class="footer">
+<div class=".table-footer">
 		<span class="footer-section">
 			© 2023 Schoolify - All Rights Reserved
 		</span>
