--- a/templates/common/index.html
+++ b/templates/common/index.html
@@ -4,7 +4,7 @@
 <html lang="en">
 <head>
     <link rel="stylesheet"
-          href="{% static 'css/style.css' %}">
+          href="{% static '/css/style.css' %}">
     <title>Schoolfy</title>
 
 </head>
@@ -56,7 +56,7 @@
         </nav>
 
 <div class="music-img">
-            <img style=" width: 1900px; height: 700px;" src="{% static 'images/graduation-hat.jpg' %}" alt="music-icon">
+            <img style=" width: 1903px; height: 773px;" src="{% static 'images/graduation-hat.jpg' %}" alt="music-icon">
         </div>
 
     {% block page_content %}
