--- a/templates/assignment/assignment-english-create.html
+++ b/templates/assignment/assignment-english-create.html
@@ -11,7 +11,7 @@
 
     <section id="create-page" class="auth">
         <form method="post" action="{% url 'assignment english create' %}">
-            <div class="container">
+            <div style="color: #551A8B" class="container">
                 {{ form }}
                 {% csrf_token %}
                 <input class="btn" type="submit" value="Submit assignment">
