--- a/templates/assignment/assignment-mathematics-edit.html
+++ b/templates/assignment/assignment-mathematics-edit.html
@@ -8,7 +8,7 @@
 
     <section id="create-page" class="auth">
         <form method="post" action="{% url 'assignment mathematics edit' pk=assignmentmathematics.pk %}">
-            <div class="container">
+            <div style="color: #551A8B" class="container">
                 <h1>Edit {{ assignmentmathematics.assignment_name }} Assignment</h1>
                 {{ form }}
                 {% csrf_token %}
