--- a/templates/auth/profile-delete.html
+++ b/templates/auth/profile-delete.html
@@ -15,8 +15,10 @@
             <div class="container">
                 <h1>Are you sure you want to delete your profile?</h1>
                     {{ form }}
-                    <input type="submit" value="Confirm">
-                {% csrf_token %}
+                <div class="buttons">
+                     <button type="submit" class="delete-button">Delete</button>
+                     {% csrf_token %}
+                </div>
             </div>
         </form>
     </section>
