--- a/templates/common/base.html
+++ b/templates/common/base.html
@@ -4,7 +4,7 @@
 <html lang="en">
 <head>
     <link rel="stylesheet"
-          href="{% static 'css/style.css' %}">
+          href="{% static '/css/style.css' %}">
     <title>Schoolfy</title>
 
 </head>
@@ -62,5 +62,5 @@
 
 {% include 'common/footer.html' %}
 
-</body>
+
 </html>
