--- a/templates/questions/questions-delete.html
+++ b/templates/questions/questions-delete.html
@@ -9,9 +9,10 @@
 
                 <h1>Are you sure you want to delete your question: "{{ question.question }}"?</h1>
                     {{ form }}
-                    <input type="submit" value="Confirm">
-                {% csrf_token %}
-            </div>
+                 <div class="buttons">
+                     <button type="submit" class="delete-button">Delete</button>
+                     {% csrf_token %}
+                </div>
         </form>
     </section>
 
