--- a/templates/book/books-list.html
+++ b/templates/book/books-list.html
@@ -14,7 +14,7 @@
                 <section id="create-page" class="auth">
                     <form method="get" action="{% url 'books list' %}">
                         <div class="container" style="margin-bottom: -30px; margin-top: -30px">
-                            <input name="pattern" placeholder="Search a book by title.."/>
+                            <input style="height: 30px" name="pattern" placeholder="Search a book by title.."/>
                             <input class="btn" type="submit" value="Search">
                         </div>
                     </form>
