--- a/templates/assignment/assignment-english-details.html
+++ b/templates/assignment/assignment-english-details.html
@@ -3,30 +3,33 @@
 
 {% block page_content %}
 
-<body>
-<div id="box">
-    <section id="car-details">
-        <h1>Assignment Details</h1>
-        <div class="info-section">
+    <body>
+    <div id="box">
+        <section id="car-details">
+            <h1>Assignment Details</h1>
+            <div class="info-section">
 
-            <div class="car-header">
-                <h1>{{ assignmentenglish.assignment_name}}</h1>
-                <p><span class="description">School Subject: {{ assignmentenglish.school_subject}}</span></p>
-                <p><span class="description">Essay: {{ assignmentenglish.essay }}</span></p>
-                <p><span class="description">External Resource Used: {{ assignmentenglish.external_resources_used }}</span></p>
-                <p><span class="description">Created by student: {{ assignmentenglish.created_by}}</span></p>
+                <div class="car-header">
+                    <h1>{{ assignmentenglish.assignment_name }}</h1>
+                    <p><span class="description">School Subject: {{ assignmentenglish.school_subject }}</span></p>
+                    <p><span class="description">Essay: {{ assignmentenglish.essay }}</span></p>
+                    <p><span
+                            class="description">External Resource Used: {{ assignmentenglish.external_resources_used }}</span>
+                    </p>
+                    <p><span class="description">Created by student: {{ assignmentenglish.created_by }}</span></p>
+                </div>
+
+
+                <div class="buttons">
+                    {% if request.user == assignmentenglish.created_by %}
+                        <a href="{% url 'assignment english edit' pk=assignmentenglish.pk %}"
+                           class="edit-button">Edit</a>
+                        <a href="{% url 'assignment english delete' pk=assignmentenglish.pk %}" class="delete-button">Delete</a>
+                    {% endif %}
+                </div>
             </div>
-
-
-            <div class="buttons">
-                {% if request.user == assignmentenglish.created_by  %}
-                <a href="{% url 'assignment english edit' pk=assignmentenglish.pk %}" class="edit-button">Edit</a>
-                <a href="{% url 'assignment english delete' pk=assignmentenglish.pk %}" class="delete-button">Delete</a>
-                {% endif %}
-            </div>
-        </div>
-    </section>
-{% csrf_token %}
-</div>
-</body>
+        </section>
+        {% csrf_token %}
+    </div>
+    </body>
 {% endblock %}
