--- a/templates/assignment/assignment-mathematics-details.html
+++ b/templates/assignment/assignment-mathematics-details.html
@@ -3,29 +3,31 @@
 
 {% block page_content %}
 
-<body>
-<div id="box">
-    <section id="car-details">
-        <h1>Assignment Details</h1>
-        <div class="info-section">
+    <body>
+    <div id="box">
+        <section id="car-details">
+            <h1>Assignment Details</h1>
+            <div class="info-section">
 
-            <div class="car-header">
-                <h1>{{ assignmentmathematics.assignment_name}}</h1>
-                <p><span class="description">School Subject: {{ assignmentmathematics.school_subject}}</span></p>
-                <p><span class="description">Solution: {{ assignmentmathematics.solution }}</span></p>
-                <p><span class="description">Created by student: {{ assignmentmathematics.created_by}}</span></p>
+                <div class="car-header">
+                    <h1>{{ assignmentmathematics.assignment_name }}</h1>
+                    <p><span class="description">School Subject: {{ assignmentmathematics.school_subject }}</span></p>
+                    <p><span class="description">Solution: {{ assignmentmathematics.solution }}</span></p>
+                    <p><span class="description">Created by student: {{ assignmentmathematics.created_by }}</span></p>
+                </div>
+
+
+                <div class="buttons">
+                    {% if request.user == assignmentmathematics.created_by %}
+                        <a href="{% url 'assignment mathematics edit' pk=assignmentmathematics.pk %}"
+                           class="edit-button">Edit</a>
+                        <a href="{% url 'assignment mathematics delete' pk=assignmentmathematics.pk %}"
+                           class="delete-button">Delete</a>
+                    {% endif %}
+                </div>
             </div>
-
-
-            <div class="buttons">
-                {% if request.user == assignmentmathematics.created_by  %}
-                <a href="{% url 'assignment mathematics edit' pk=assignmentmathematics.pk %}" class="edit-button">Edit</a>
-                <a href="{% url 'assignment mathematics delete' pk=assignmentmathematics.pk %}" class="delete-button">Delete</a>
-                {% endif %}
-            </div>
-        </div>
-    </section>
-{% csrf_token %}
-</div>
-</body>
+        </section>
+        {% csrf_token %}
+    </div>
+    </body>
 {% endblock %}
