--- a/templates/assignment/assignment-music-edit.html
+++ b/templates/assignment/assignment-music-edit.html
@@ -3,19 +3,20 @@
 
 {% block page_content %}
 
-<body>
-<div id="box">
+    <body>
+    <div id="box">
 
-    <section id="create-page" class="auth">
-        <form method="post" action="{% url 'assignment music edit' pk=assignmentmusic.pk %}" enctype="multipart/form-data">
-            <div style="color: #551A8B" class="container">
-                <h1>Edit {{ assignmentmusic.assignment_name }} Assignment</h1>
-                {{ form }}
-                {% csrf_token %}
-                <input class="btn submit" type="submit" value="Edit Assignment">
-            </div>
-        </form>
-    </section>
-</div>
-</body>
+        <section id="create-page" class="auth">
+            <form method="post" action="{% url 'assignment music edit' pk=assignmentmusic.pk %}"
+                  enctype="multipart/form-data">
+                <div style="color: #551A8B" class="container">
+                    <h1>Edit {{ assignmentmusic.assignment_name }} Assignment</h1>
+                    {{ form }}
+                    {% csrf_token %}
+                    <input class="btn submit" type="submit" value="Edit Assignment">
+                </div>
+            </form>
+        </section>
+    </div>
+    </body>
 {% endblock %}
