--- a/templates/assignment/assignment-music-details.html
+++ b/templates/assignment/assignment-music-details.html
@@ -3,29 +3,30 @@
 
 {% block page_content %}
 
-<body>
-<div id="box">
-    <section id="car-details">
-        <h1>Assignment Details</h1>
-        <div class="info-section">
+    <body>
+    <div id="box">
+        <section id="car-details">
+            <h1>Assignment Details</h1>
+            <div class="info-section">
 
-            <div class="car-header">
-                <h1>{{ assignmentmusic.assignment_name}}</h1>
-                <p><span class="description">School Subject: {{ assignmentmusic.school_subject}}</span></p>
-                <p><span class="description">Song: {{ assignmentmusic.song.url }}</span></p>
-                <p><span class="description">Created by student: {{ assignmentmusic.created_by}}</span></p>
+                <div class="car-header">
+                    <h1>{{ assignmentmusic.assignment_name }}</h1>
+                    <p><span class="description">School Subject: {{ assignmentmusic.school_subject }}</span></p>
+                    <p><span class="description">Song: {{ assignmentmusic.song.url }}</span></p>
+                    <p><span class="description">Created by student: {{ assignmentmusic.created_by }}</span></p>
+                </div>
+
+                <div class="buttons">
+                    {% if request.user == assignmentmusic.created_by %}
+                        <a href="{% url 'assignment music edit' pk=assignmentmusic.pk %}" class="edit-button">Edit</a>
+                        <a href="{% url 'assignment music delete' pk=assignmentmusic.pk %}"
+                           class="delete-button">Delete</a>
+                    {% endif %}
+                </div>
+
             </div>
-
-            <div class="buttons">
-                {% if request.user == assignmentmusic.created_by  %}
-                <a href="{% url 'assignment music edit' pk=assignmentmusic.pk %}" class="edit-button">Edit</a>
-                <a href="{% url 'assignment music delete' pk=assignmentmusic.pk %}" class="delete-button">Delete</a>
-                {% endif %}
-            </div>
-
-        </div>
-    </section>
-{% csrf_token %}
-</div>
-</body>
+        </section>
+        {% csrf_token %}
+    </div>
+    </body>
 {% endblock %}
