--- a/templates/questions/answer-delete.html
+++ b/templates/questions/answer-delete.html
@@ -4,12 +4,14 @@
 {% block page_content %}
 
     <section id="delete-page" class="auth">
-        <form method="post" action="{% url 'delete answer' pk=answer.pk question_id=answer.to_question.pk  %}">
+        <form method="post" action="{% url 'delete answer' pk=answer.pk question_id=answer.to_question.pk %}">
             <div class="container">
                 <h1>Are you sure you want to delete your answer"{{ answer.comment_text }}"?</h1>
-                    {{ form }}
-                    <input type="submit" value="Confirm">
-                {% csrf_token %}
+                {{ form }}
+                <div class="buttons">
+                    <button type="submit" class="delete-button">Delete</button>
+                    {% csrf_token %}
+                </div>
             </div>
         </form>
     </section>
