--- a/templates/assignment/assignment-english-details.html
+++ b/templates/assignment/assignment-english-details.html
@@ -13,9 +13,9 @@
                     <h1>{{ assignmentenglish.assignment_name }}</h1>
                     <p><span class="description">School Subject: {{ assignmentenglish.school_subject }}</span></p>
                     <p><span class="description">Essay: {{ assignmentenglish.essay }}</span></p>
-                    <p><span
-                            class="description">External Resource Used: {{ assignmentenglish.external_resources_used }}</span>
-                    </p>
+                    {% if assignmentenglish.external_resources_used %}
+                    <p><span class="description">External Resource Used: {{ assignmentenglish.external_resources_used }}</span></p>
+                    {% endif %}
                     <p><span class="description">Created by student: {{ assignmentenglish.created_by }}</span></p>
                 </div>
 
