--- a/templates/assignment/assignment-music-details.html
+++ b/templates/assignment/assignment-music-details.html
@@ -10,7 +10,7 @@
             <div class="info-section">
 
                 <div class="car-header">
-                    <h1>{{ assignmentmusic.assignment_name }}</h1>
+                    <h1 style="text-align: center">{{ assignmentmusic.assignment_name }}</h1>
                     <p><span class="description">School Subject: {{ assignmentmusic.school_subject }}</span></p>
                     <p><span class="description">Song: {{ assignmentmusic.song.url }}</span></p>
                     <p><span class="description">Created by student: {{ assignmentmusic.created_by }}</span></p>
