--- a/templates/assignment/assignment-music-list.html
+++ b/templates/assignment/assignment-music-list.html
@@ -9,7 +9,7 @@
     {% if object_list %}
 
         <section id="catalogue">
-        <h1 style="color:white;">List of Assignments</h1>
+        <h1 style="color:white;">List of Assignments in Musics</h1>
 
         {% for assignment in assignmentmusic_list %}
 
@@ -30,7 +30,7 @@
 
     </section>
 
-    {% if assignmentmusic_list %}
+    {% if assignmentmusics_count > 3 %}
 
         <div class="pagination">
     <span class="step-links">
