--- a/templates/questions/questions.html
+++ b/templates/questions/questions.html
@@ -47,7 +47,7 @@
                                     Answer:{{ answer.comment_text }}
                                 </p>
                                 <p>
-                                    Replied by student with ID:{{ answer.user.personal_number }}
+                                    Replied by ID:{{ answer.user.personal_number }}
                                 </p>
                             </div>
                             <span>{{ answer.created_on }}</span>
