--- a/templates/assignment/assignment-english-list.html
+++ b/templates/assignment/assignment-english-list.html
@@ -7,7 +7,7 @@
     {% if object_list %}
 
         <section id="catalogue">
-        <h1 style="color:white;">List of Assignments</h1>
+        <h1 style="color:white;text-align: center">List of Assignments in English</h1>
 
         {% for assignment in assignmentenglish_list %}
 
@@ -28,7 +28,7 @@
 
 </section>
 
-    {% if assignmentenglish_list %}
+    {% if assignmentenglish_count > 3 %}
 
         <div class="pagination">
     <span class="step-links">
